--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "@angular/platform-browser": "~8.1.3",
     "@angular/platform-browser-dynamic": "~8.1.3",
     "@angular/router": "~8.1.3",
+    "@fullcalendar/angular": "^5.10.2",
+    "@fullcalendar/daygrid": "^5.10.1",
+    "@fullcalendar/interaction": "^5.10.1",
+    "@fullcalendar/timegrid": "^5.10.1",
     "material-design-icons": "^3.0.1",
     "ng-multiselect-dropdown": "^0.3.8",
     "ngx-pagination": "^5.1.1",
