--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@fullcalendar/daygrid": "^5.10.1",
     "@fullcalendar/interaction": "^5.10.1",
     "@fullcalendar/timegrid": "^5.10.1",
+    "chart.js": "^2.9.3",
     "material-design-icons": "^3.0.1",
     "ng-multiselect-dropdown": "^0.3.8",
+    "ng2-charts": "^2.2.3",
     "ngx-pagination": "^5.1.1",
     "rxjs": "~6.4.0",
     "sweetalert2": "^11.4.4",
